--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bmm-admin",
-    "version": "1.2.8-SNAPSHOT",
+    "version": "1.2.8-alpha",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -29,10 +29,12 @@
         "eslint": "8.32.0",
         "eslint-config-next": "13.1.2",
         "formik": "^2.2.9",
+        "framer-motion": "^11.3.8",
         "highlight.js": "^11.7.0",
         "i18next": "^22.4.10",
         "mantine-datatable": "^1.7.35",
-        "next": "14.0.3",
+        "next": "^14.2.3",
+        "next-nprogress-bar": "^2.3.13",
         "ni18n": "^1.0.5",
         "react": "18.2.0",
         "react-animate-height": "^3.1.0",
@@ -64,7 +66,9 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.8",
+        "@types/highlight.js": "^10.1.0",
         "@types/lodash": "^4.14.191",
+        "@types/nprogress": "^0.2.3",
         "@types/react-copy-to-clipboard": "^5.0.4",
         "@types/react-flatpickr": "^3.8.8",
         "@types/react-redux": "^7.1.32",
