--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-cookie": "7.1.4",
     "react-dom": "^18",
-    "react-i18next": "14.1.2"
+    "react-i18next": "14.1.2",
+    "react-perfect-scrollbar": "^1.5.8"
   },
   "devDependencies": {
     "@types/node": "^20",
