--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@reduxjs/toolkit": "^2.2.6",
+    "@tabler/icons-react": "^3.11.0",
     "accept-language": "3.0.18",
     "dayjs": "^1.11.12",
     "i18next": "23.11.5",
