[update] 配置颜色生成器，自动生成10个颜色

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.11.0",
     "accept-language": "3.0.18",
+    "color": "^4.2.3",
     "dayjs": "^1.11.12",
+    "esm": "^3.2.25",
     "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-resources-to-backend": "1.2.1",
@@ -28,6 +30,7 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@types/color": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
