--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-resources-to-backend": "1.2.1",
     "next": "14.2.5",
+    "next-nprogress-bar": "^2.3.13",
     "react": "^18",
     "react-cookie": "7.1.4",
     "react-dom": "^18",
