--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@tabler/icons-react": "^3.11.0",
     "accept-language": "3.0.18",
     "color": "^4.2.3",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
     "esm": "^3.2.25",
+    "formik": "^2.4.6",
     "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-resources-to-backend": "1.2.1",
@@ -28,10 +30,14 @@
     "react-i18next": "14.1.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/color": "^3.0.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
