--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-resources-to-backend": "1.2.1",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "next-nprogress-bar": "^2.3.13",
     "react": "^18",
     "react-cookie": "7.1.4",
