--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-resources-to-backend": "1.2.1",
+    "joi": "^17.13.3",
     "next": "14.2.5",
     "next-nprogress-bar": "^2.3.13",
     "react": "^18",
