--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.12",
     "esm": "^3.2.25",
     "formik": "^2.4.6",
+    "framer-motion": "^11.3.21",
     "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-resources-to-backend": "1.2.1",
@@ -33,6 +34,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
     "react-redux": "^9.1.2",
+    "use-immer": "^0.10.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
