--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3333",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.11.0",
     "accept-language": "3.0.18",
+    "axios": "^1.7.3",
     "color": "^4.2.3",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
@@ -34,6 +35,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
     "react-redux": "^9.1.2",
+    "swr": "^2.2.5",
     "use-immer": "^0.10.0",
     "yup": "^1.4.0"
   },
