--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "i18next-resources-to-backend": "1.2.1",
     "joi": "^17.13.3",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^8.5.1",
     "next": "14.2.5",
     "next-nprogress-bar": "^2.3.13",
     "react": "^18",
@@ -45,6 +46,7 @@
     "@types/color": "^3.0.6",
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
