--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_next",
+  "name": "anthill-admin",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -28,6 +28,7 @@
     "esm": "^3.2.25",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
+    "highlight.js": "^11.9.0",
     "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-resources-to-backend": "1.2.1",
