--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-animate-height": "^3.2.3",
     "react-apexcharts": "^1.4.1",
     "react-cookie": "7.1.4",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-i18next": "14.1.2",
     "react-perfect-scrollbar": "^1.5.8",
