--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "swiper": "^11.1.9",
     "swr": "^2.2.5",
     "use-immer": "^0.10.0",
+    "yet-another-react-lightbox": "^3.21.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
