--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-sortablejs": "^6.1.4",
+    "react-use": "^17.5.1",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.9",
