--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-sortablejs": "^6.1.4",
+    "react-text-mask": "^5.5.0",
     "react-use": "^17.5.1",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7",
@@ -71,6 +72,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-text-mask": "^5.4.14",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
