--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-popper": "^2.3.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-select": "^5.8.0",
     "react-sortablejs": "^6.1.4",
     "react-text-mask": "^5.5.0",
     "react-use": "^17.5.1",
