--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-i18next": "14.1.2",
+    "react-images-uploading": "^3.1.7",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
     "react-quill": "^2.0.0",
