--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.11.0",
     "@tippyjs/react": "^4.2.6",
+    "@x1mrdonut1x/nouislider-react": "^3.4.3",
     "accept-language": "3.0.18",
     "axios": "^1.7.3",
     "color": "^4.2.3",
@@ -45,6 +46,7 @@
     "react-cookie": "7.1.4",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-flatpickr": "^3.10.13",
     "react-i18next": "14.1.2",
     "react-images-uploading": "^3.1.7",
     "react-perfect-scrollbar": "^1.5.8",
@@ -75,6 +77,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-flatpickr": "^3.8.11",
     "@types/react-text-mask": "^5.4.14",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
