--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-animate-height": "^3.2.3",
     "react-apexcharts": "^1.4.1",
     "react-cookie": "7.1.4",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
@@ -76,6 +77,7 @@
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
     "@types/react-flatpickr": "^3.8.11",
     "@types/react-text-mask": "^5.4.14",
