--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "anthill-admin",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
@@ -26,6 +27,7 @@
     "color": "^4.2.3",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
+    "es-toolkit": "^1.16.0",
     "esm": "^3.2.25",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
