--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-sortablejs": "^6.1.4",
     "react-text-mask": "^5.5.0",
     "react-use": "^17.5.1",
+    "redux-remember": "^5.1.0",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.9",
