[fix] 修复Image组件autosize属性报错；修复Header组件no unique key报错；

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "*.ts"
-, "i18n/I18nProvider.jsx", "components/icon/menu/icon-menu-analyticstsx"  ],
+    "*.ts",
+    "i18n/I18nProvider.jsx"
+  ],
   "exclude": ["node_modules"]
 }
