--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@headlessui/react": "^2.1.2",
     "@mantine/core": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.11",
     "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.11.0",
     "@tippyjs/react": "^4.2.6",
@@ -72,6 +74,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^3.0.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@types/color": "^3.0.6",
@@ -79,6 +82,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.7",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
