--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mantine-datatable": "^7.11.2",
     "next": "14.2.5",
     "next-nprogress-bar": "^2.3.13",
+    "rc-tree": "^5.9.0",
     "react": "^18",
     "react-animate-height": "^3.2.3",
     "react-apexcharts": "^1.4.1",
