--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.1.2",
     "@mantine/core": "^7.11.2",
+    "@mantine/dates": "^7.13.2",
     "@mantine/hooks": "^7.11.2",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.11",
@@ -28,7 +29,7 @@
     "axios": "^1.7.3",
     "color": "^4.2.3",
     "crypto-js": "^4.2.0",
-    "dayjs": "^1.11.12",
+    "dayjs": "^1.11.13",
     "es-toolkit": "^1.16.0",
     "esm": "^3.2.25",
     "formik": "^2.4.6",
